--- a/cv.yaml
+++ b/cv.yaml
@@ -114,7 +114,7 @@ skills:
     details: Ubuntu/Debian, NetBeans/Eclipse, PHP/Python/CoffeeScript, git/svn
   - title: Working Knowledge
     details:
-      - UML
+      - UML, OOP, MVC
       - PHP, Java, Python, JavaScript, CoffeeScript, HTML
       - MySQL, MongoDB
       - Yii, Symfony, Django
@@ -122,7 +122,7 @@ skills:
 
   - title: Basic Knowledge
     details:
-      - Ruby, Rails, CSS
+      - Ruby, Rails, CSS, C, .NET
       - Drupal, Redmine, Chamilo, Wordpress
       - CentOS, FreeBSD
 
