--- a/cv.yaml
+++ b/cv.yaml
@@ -114,7 +114,7 @@ experience:
 
 skills:
   - title: Preference
-    details: Ubuntu/Debian, NetBeans/Eclipse, PHP/Python/ES6, Git/Subversion
+    details: Ubuntu/Debian, NetBeans/Eclipse, Python/ES6/PHP, Git/Subversion
   - title: Working Knowledge
     details:
       - UML, OOP, MVC, Continuous Integration, Agile development
