--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,6 @@ jobs:
 
     - name: Build HTML and PDF
       run: |
-        apt-get install -y $(cat apt-packages.txt)
+        sudo apt-get install -y $(cat apt-packages.txt)
         pip3 install -r requirements.txt
         python3 -m cv html pdf
