--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,5 +13,6 @@ jobs:
     - name: Build HTML and PDF
       run: |
         sudo apt-get install -y $(cat apt-packages.txt)
+        pip3 install setuptools
         pip3 install -r requirements.txt
         python3 -m cv html pdf
