--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,7 @@ jobs:
         
     - name: Build GitHub Pages
       run: |
+        git fetch --no-tags --prune --depth=1 origin +refs/heads/*:refs/remotes/origin/*
         git config --global user.email "cvbot@jorgebg.com"
         git config --global user.name "CV Bot"
 
