--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
     
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v2
 
@@ -27,10 +27,11 @@ jobs:
         mkdir -p .data
         cp build/tex/cv.pdf ".data/Jorge Barata.pdf"
         cp cv.md .data/index.md
+        cp cv.ext.md .data/extended.md
         git stash
         git checkout gh-pages
         mv .data/* .
-        git add "Jorge Barata.pdf" index.md
+        git add "Jorge Barata.pdf" index.md extended.md
         git commit -m"Automated update"
         rmdir .data
         git push origin gh-pages:gh-pages
